# solar-flux-ml-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.backfill  Dockerfile.batch  Dockerfile.train  Dockerfile.ui  README.md  pyproject.toml
.github/workflows/: backfill.yaml  batch.yaml  deploy_api.yaml  deploy_ui.yaml  setup.yaml  train.yaml
notebooks/: batch_exploration.ipynb  exploration.ipynb  inference.ipynb  scraping.ipynb  train.ipynb
src/: util.py
src/feature/: backfill.py  batch.py  feature_extraction.py
src/inference/: api.py  app.py
src/training/: dataset.py  eval.py  metrics.py  train.py  tune.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
