[project]
name = "solar-flux-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2026.4.0",
    "aiohttp>=3.13.5",
    "fsspec>=2026.3.0",
    "gcsfs>=2026.3.0",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "netcdf4>=1.7.4",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "s3fs>=2026.3.0",
    "tqdm>=4.67.3",
    "xarray[io]>=2026.2.0",
]

[dependency-groups]
dev = [
    "identify>=2.6.19",
    "pre-commit>=4.6.0",
]

[tool.ruff.lint]
extend-select = ["I"]
